--- a/【文章目录】/【5 - 社会科学】/540 - 社会学/544 - 家庭 & 族制/接班第一.md
+++ b/【文章目录】/【5 - 社会科学】/540 - 社会学/544 - 家庭 & 族制/接班第一.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-11-05]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/01-家族答集 
-> Tag:
+> Tag: #4-世界史/4D-历史 #1-家族/1G-统绪/2-传家 
 > 评论区:
 > 泛讨论:
 
