--- a/【文章目录】/【1 - 哲学类】/150 - 逻辑学/153 - 科学方法论/1. 保持理性/事实黑.md
+++ b/【文章目录】/【1 - 哲学类】/150 - 逻辑学/153 - 科学方法论/1. 保持理性/事实黑.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-11-08]
 > Link:
 > Category: #【答集】/01-家族答集 
-> Tag:
+> Tag: #1-家族/1B-处世/2-外务/2f-表达意愿 #1-家族/1B-处世/2-外务/2g-交友之道 #2-事业/2A-功夫/1-核心能力/学逻辑
 > 评论区:
 > 泛讨论:
 
