--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/自强/冤枉权.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/自强/冤枉权.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-11-07]
 > Link:
 > Category: #【答集】/01-家族答集 
-> Tag:
+> Tag: #1-家族/1A-内外/1-内在建设/1d-自强 #1-家族/1C-安全/1-自我保护/1c-自救策略 
 > 评论区:
 > 泛讨论:
 
