--- a/【文章目录】/【1 - 哲学类】/100 - 哲学总论/论哲学/学哲学 2.md
+++ b/【文章目录】/【1 - 哲学类】/100 - 哲学总论/论哲学/学哲学 2.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2021-10-03]
 > Link: [[全科学习]] [[学哲学 1]] [[教养]] [[艺术与哲学]] [[哲学家]] [[喜欢哲学]]
 > Category: #【答集】/01-家族答集
-> Tag: #2-事业/2A-功夫/2-拓展能力/哲学
+> Tag: #2-事业/2A-功夫/2-拓展能力/哲学 #2-事业/2A-功夫/1-核心能力/创新能力 
 > 评论区: [[评论区_学哲学 2]]
 > 泛讨论:
 
