--- a/【文章目录】/【8 - 语言文学类】/890 - 新闻学/认知战/你的颜色.md
+++ b/【文章目录】/【8 - 语言文学类】/890 - 新闻学/认知战/你的颜色.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-05-15]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/07-军事技术与艺术
-> Tag: #1-家族/1A-内外/1-内在建设/1d-自强 #2-事业/2C-职业/1-态度与伦理
+> Tag: #1-家族/1A-内外/1-内在建设/1d-自强 #2-事业/2C-职业/1-态度与伦理 #2-事业/2A-功夫/1-核心能力 
 > 评论区:
 > 泛讨论:
 
