--- a/【文章目录】/【9 - 艺术类】/940 - 绘画 & 书法/尊重阴影.md
+++ b/【文章目录】/【9 - 艺术类】/940 - 绘画 & 书法/尊重阴影.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2022-05-22]
 > Link: [[画出问题]] [[画坑]] [[敢画]] [[着色]] [[写实]] [[原画]] [[画的关键]]
 > Category: #【答集】/08-文艺答集
-> Tag: #2-事业/2A-功夫
+> Tag: #2-事业/2A-功夫/1-核心能力/学绘画 
 > 评论区: [[评论区_尊重阴影]]
 > 泛讨论:
 
