--- a/【文章目录】/【9 - 艺术类】/940 - 绘画 & 书法/画出问题.md
+++ b/【文章目录】/【9 - 艺术类】/940 - 绘画 & 书法/画出问题.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-06-05]
 > Link: [[画的关键]] [[画坑]]
 > Category: #【答集】/08-文艺答集
-> Tag: #2-事业/2A-功夫
+> Tag: #2-事业/2A-功夫/1-核心能力/学绘画 
 > 评论区:
 > 泛讨论:
 
