--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/礼节规范/不可论断人.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/礼节规范/不可论断人.md
@@ -33,13 +33,13 @@
 
 这些“判断许可”，有时是通过隐式的邀约获取的，比如你是一个医生，对方来挂了号，这就是允许了你的判断。又比如你是在知乎回答他人的一个问题，他既然问了求答，也就自然等于做了授权。
 
-但在这其中，你要注意**避免受某甲的邀约去判断并未授权给他的某乙。**某甲邀请你判断某乙，你必须要先检查某甲是否有权判断某乙。比如某甲是不是乙的监护人？如果是，那是可以的。某甲是不是某乙的医生？如果是，那么你是可以受邀参与关于某乙疾病的会诊的。
+但在这其中，你要注意**避免受某甲的邀约去判断并未授权给他的某乙**。某甲邀请你判断某乙，你必须要先检查某甲是否有权判断某乙。比如某甲是不是乙的监护人？如果是，那是可以的。某甲是不是某乙的医生？如果是，那么你是可以受邀参与关于某乙疾病的会诊的。
 
 同时，你还要检查某乙给予的授权的范围，考虑某乙所授予甲的判断权，是否包含可以被转授的许可。比如，在没有被授权的情况下，独立执业的心理医生是无权邀请其他人来会诊的。但如果一名病人是去一家诊所求治，合同关系是与诊所之间签署，那么这可能包含了该诊所所有的受雇医生。你如果也是这位医生的同事，如果你受到邀请，你就有了判断权，
 
 是的，关于判断权的问题就是这么微妙、复杂而又严肃。所以出于严谨、保守起见，你最好把授权问题弄得显式和明确一些——比如你拿不准的话就直接问一下对方是否是在求取你的关于某一方面的判断，得不到肯定答复就干脆不继续。或者你一定要有明确预示的权柄在先，以至于只要在这个场合下与你接触的人就等于自动声明将自己置于你的判断之下。
 
-**举个比较经典而应景的例子，你在知乎自己的回答的讨论区里，有自由删除、折叠一切回复的编辑权，那么这就意味着在你讨论区里发表言论的人，等于自动的声明了愿意接受你的删除、折叠的判断。**在这前提下，你就可以自由行使被授予的权柄，而不必纠结对方的“抗议”——因为那本质上是对方出尔反尔，不讲信用，或者缺少对待社会契约的正确意识罢了。那不是你的问题，你无论如何自由心证，也没有“侵犯他人自由”的问题。在讨论区里抗议答主删除或者折叠自己的回复是一种对自己的社会责任不明了，对契约关系不敏感、对伦理认识不成熟的表现。
+**举个比较经典而应景的例子，你在知乎自己的回答的讨论区里，有自由删除、折叠一切回复的编辑权，那么这就意味着在你讨论区里发表言论的人，等于自动的声明了愿意接受你的删除、折叠的判断**。在这前提下，你就可以自由行使被授予的权柄，而不必纠结对方的“抗议”——因为那本质上是对方出尔反尔，不讲信用，或者缺少对待社会契约的正确意识罢了。那不是你的问题，你无论如何自由心证，也没有“侵犯他人自由”的问题。在讨论区里抗议答主删除或者折叠自己的回复是一种对自己的社会责任不明了，对契约关系不敏感、对伦理认识不成熟的表现。
 
 基于同一种规则，你去别人的答案下写长篇回复——或者哪怕一个字也罢——你都必须做好可能被删除或者折叠的心理准备，明了对方有这完全的自由，而且你一但落笔就等于签了弃权协议。
 
