--- a/【文章目录】/【10 - 专题类】/俄乌战争/优势在我.md
+++ b/【文章目录】/【10 - 专题类】/俄乌战争/优势在我.md
@@ -21,13 +21,9 @@
 
 那么，这个观点有没有思考过**翻浆期对乌军的影响**？
 
-  
-
 翻浆期带来的具体的影响，精确的来说是什么？
 
 是“**野外陆地机动成本极高，只有硬质路面和陆地轨道交通可以通行**”。
-
-  
 
 那么问题来了——
 
@@ -70,8 +66,6 @@
 仅仅因为看多了这类“绝对乐观”的声音，就不经过这类最粗浅的怀疑和核实，取跟着乐观起来，这是一种极其明显的“幼稚”特征。
 
 **过了可以原谅的年纪，幼稚即愚蠢。**
-
-  
 
 另一个观察的方向，就是要判断到底是能力有限导致的失误，而是有所图谋而有意为之。
 
@@ -117,7 +111,7 @@
 
 城外几十公里长的的车队，堂而皇之的摆在“死亡公路“上一动不动，要解释为“想前进，但是因为遭遇补给困难无法前进”，那就很难解释为什么距离白俄罗斯边境**仅150公里**的车程，就足以将一只60公里长、**其中必然有油料补给车的、没有遭遇过任何战斗的车队**搞到补给困难？
 
-这需要你假设“**一只重装集团、不经历任何战斗，仅仅沿着公路开了150公里的路程，就耗尽了自身携带的补给**。**而且在显然没有任何可以攻击该车队的威胁的前提下，无法获得再补给。**”
+这需要你假设“**一只重装集团、不经历任何战斗，仅仅沿着公路开了150公里的路程，就耗尽了自身携带的补给**。**而且在显然没有任何可以攻击该车队的威胁的前提下，无法获得再补给**。”
 
 而且还是在**乌军显然连袭扰这庞大车队的能力都丧失了**的前提下——乌军倒是真的不存在“能消灭这车队而毫无行动”的有效理由。
 
@@ -141,8 +135,6 @@
 
 **你的理论必须要能解释这个疑点，才能寄予一定的信心。**
 
-  
-
 更首要的是——任何一个你打算投注注意力的分析，无论其立场如何，**都必须经过这样一个反复推敲的过程**。
 
 如果它只有激昂饱满的情绪、坚定的意志渴望、诙谐风趣的表达、机智华丽的修辞，但却没有这样一个**逻辑有效的自我怀疑的过程**。
@@ -150,8 +142,6 @@
 那么，至少建议你保留几分怀疑。
 
 ## 而且要主动远离这类信息源。
-
-  
 
 为什么？
 
@@ -164,8 +154,6 @@
 这没什么丢脸或者可耻的，但不能清醒的认识到这一点、不好好的做一个投机者，却因为情绪被人蛊惑或感动，而自欺欺人的成为一个价值观站位者，**你对自己有亏欠**。
 
 ## 你没有守护好自己，任由别人利用你的情绪弱点盗窃了你的主权。
-
-  
 
 你一旦醒悟，就应该自我警惕，警惕受到这些或有意伪装为、或无意类似于“客观分析”的东西的过多影响。
 
