--- a/【本周更新】/花绣.md
+++ b/【本周更新】/花绣.md
@@ -4,8 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2024-02-22]
 > Link:
-> Category: #【答集】/08-文艺答集 #【答集】/01-家族答集 #【答集】/03-第一性 
-> Tag: 
+> Category: #【答集】/08-文艺答集 #【答集】/01-家族答集 #【答集】/03-第一性
+> Tag:
 > 评论区:
 > 泛讨论:
 
@@ -13,7 +13,7 @@
 
 如果你觉得这是个收益，而不是个损失，那么对你纹身反而是一个筛选人的好工具。
 
-**纹身首先是一种行为艺术，然后才是一种视觉艺术。**在达到视觉效果之前，它会先达到行为的效果。
+**纹身首先是一种行为艺术，然后才是一种视觉艺术**。在达到视觉效果之前，它会先达到行为的效果。
 
 文在不同的位置、纹不同的图案，不但是视觉的选择，还是行为的选择。
 
