--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/193 - 家庭伦理/亲子关系/买椟还珠.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/193 - 家庭伦理/亲子关系/买椟还珠.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-12-31]
 > Link:
 > Category: #【答集】/01-家族答集 
-> Tag:
+> Tag: #1-家族/1G-统绪/1-规矩 #1-家族/1F-亲子/1-身为父母 
 > 评论区:
 > 泛讨论:
 
