--- a/【文章目录】/【9 - 艺术类】/970 - 技艺/演艺/不怯场.md
+++ b/【文章目录】/【9 - 艺术类】/970 - 技艺/演艺/不怯场.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-09-02]
 > Link: [[能力]] [[学好语文]] [[学习的快乐]]
 > Category: #【答集】/08-文艺答集
-> Tag: #4-世界史/4F-文艺/1-文化 #2-事业/2C-职业/1-态度与伦理
+> Tag: #4-世界史/4F-文艺/1-文化 #2-事业/2C-职业/1-态度与伦理 #2-事业/2A-功夫/2-拓展能力/演讲 
 > 评论区:
 > 泛讨论:
 
