--- a/待归档/地狱骑士.md
+++ b/待归档/地狱骑士.md
@@ -2,9 +2,9 @@
 [骑摩托时速到299千米是什么状态?](https://www.zhihu.com/question/36599495/answer/3413042927)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2024-03-05]
+> Last update: [编辑于 2024-02-29]
 > Link:
-> Category: #【答集】/05-科学答集 #【答集】/01-家族答集 
+> Category: #【答集】/05-科学答集 
 > Tag: 
 > 评论区:
 > 泛讨论:
@@ -27,11 +27,11 @@
 
 身体也必须紧紧的贴着油箱，因为如果远离也可能有强风灌入，托住你的胸腹让你漂浮起来。
 
-![Image](https://pic1.zhimg.com/50/v2-9fd028988d3a32882914f5b3289a5d2e_720w.jpg?source=2c26e567)
+![Image](https://picx.zhimg.com/50/v2-9fd028988d3a32882914f5b3289a5d2e_720w.jpg?source=2c26e567)
 
 最后就是这么个龟缩状态。
 
-你必须穿光滑厚硬材料贴身剪裁的机车服，否则任何松垮累赘的布料都可能被强风卷入湍流而剧烈的拍动，不但形成涡流阻力，而且干扰你的姿态保持。
+你必须穿光滑厚硬材料贴身剪裁的机车服，否则任何松垮累赘的布料都可能被强风卷入湍流而剧烈的拍动，不但形成巨大的涡流阻力，而且严重的威胁你的姿态保持。
 
 而又因为气流速度太大，如果赛车服保温性能不好而气温偏低，而赛服没有电热加温，你会飞快的失温。
 
