--- a/【文章目录】/【1 - 哲学类】/150 - 逻辑学/153 - 科学方法论/3. 案例分析/人肉背粮.md
+++ b/【文章目录】/【1 - 哲学类】/150 - 逻辑学/153 - 科学方法论/3. 案例分析/人肉背粮.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-12-24]
 > Link:
 > Category: #【答集】/04-社科答集 
-> Tag:
+> Tag: #4-世界史/4A-社科/新闻 #2-事业/2A-功夫/1-核心能力/学逻辑 #2-事业/2A-功夫/1-核心能力/情报分析 
 > 评论区:
 > 泛讨论:
 
