--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/文责意识/严肃活泼.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/文责意识/严肃活泼.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-12-25]
 > Link:
 > Category: #【答集】/01-家族答集 #【答集】/08-文艺答集 
-> Tag:
+> Tag: #5-专题合集/合集1-概念与定义 #2-事业/2C-职业/1-态度与伦理 #2-事业/2D-企管/1-管理者素质 #2-事业/2E-创业 #1-家族/1B-处世/2-外务/2d-文责意识 
 > 评论区:
 > 泛讨论:
 
