--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/文责意识/小鸡帽.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/文责意识/小鸡帽.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-12-30]
 > Link:
 > Category: #【答集】/01-家族答集 
-> Tag:
+> Tag: #1-家族/1F-亲子/1-身为父母 #1-家族/1B-处世/2-外务/2d-文责意识 
 > 评论区:
 > 泛讨论: 
 
