--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论投资/所谓消费.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论投资/所谓消费.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-12-22]
 > Link:
 > Category: #【答集】/04-社科答集 
-> Tag:
+> Tag: #5-专题合集/合集1-概念与定义 #4-世界史/4A-社科/经贸  #2-事业/2B-投资 
 > 评论区:
 > 泛讨论:
 
