--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/立志/信仰未定.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/立志/信仰未定.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-12-23]
 > Link:
 > Category: #【答集】/01-家族答集 
-> Tag:
+> Tag: #5-专题合集/合集1-概念与定义 #3-信仰/3B-信与疑 #1-家族/1A-内外/1-内在建设/1e-立志 
 > 评论区:
 > 泛讨论:
 
