--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论婚姻/嫁祸.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论婚姻/嫁祸.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-12-23]
 > Link:
 > Category: #【答集】/03-第一性 
-> Tag:
+> Tag: #1-家族/1E-两性/1-亲密关系/1a-交往准则/贪与爱 
 > 评论区:
 > 泛讨论:
 
