--- a/【文章目录】/【4 - 应用科学】/490 - 商学/494 - 企业管理/无敌铁公鸡.md
+++ b/【文章目录】/【4 - 应用科学】/490 - 商学/494 - 企业管理/无敌铁公鸡.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-12-26]
 > Link:
 > Category: #【答集】/02-企管答集 
-> Tag:
+> Tag: #2-事业/2E-创业 #2-事业/2D-企管/1-管理者素质 
 > 评论区:
 > 泛讨论:
 
