--- a/【文章目录】/【9 - 艺术类】/970 - 技艺/演艺/三花聚顶.md
+++ b/【文章目录】/【9 - 艺术类】/970 - 技艺/演艺/三花聚顶.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-12-29]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/01-家族答集 
-> Tag:
+> Tag: #1-家族/1B-处世/2-外务/2f-表达意愿 #2-事业/2A-功夫/2-拓展能力/演讲
 > 评论区:
 > 泛讨论:
 
