--- a/【文章目录】/【3 - 自然科学】/360 - 生物科学/龙的传人.md
+++ b/【文章目录】/【3 - 自然科学】/360 - 生物科学/龙的传人.md
@@ -2,7 +2,7 @@
 [把100只家鸡放到荒野中，3年后它们有什么变化？](https://www.zhihu.com/question/434124471/answer/3419239851)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2024-03-06]
+> Last update: [编辑于 2024-04-07]
 > Link:
 > Category: #【答集】/05-科学答集 
 > Tag: #4-世界史/4E-科学技术/1-科学 
@@ -41,7 +41,7 @@
 
 问题是，在山林地的复杂条件下，没有能在林间自由穿梭的猛禽可以大到能捕食鸡的。鸡躲在树下面，高空鹰隼根本都发现不了它们，发现了钻了树林也追击不了。
 
-鸡形目根本龙的传人，恐家嫡传，进化赢家。
+鸡形目根本龙的传人，恐门嫡传，进化赢家。
 
 要不然为什么会这么嚣张？又是头冠，又是吐绶，又是红腹，又是锦毛，又是百眼花翎？
 
@@ -49,9 +49,9 @@
 
 ![Image](https://picx.zhimg.com/50/v2-dd95ed8acf8e9a0c424e005643906e5f_720w.jpg?source=2c26e567)
 
-![Image](https://pica.zhimg.com/50/v2-af16eda01d236de597d7bcf4bf957368_720w.jpg?source=2c26e567)
+![Image](https://picx.zhimg.com/50/v2-af16eda01d236de597d7bcf4bf957368_720w.jpg?source=2c26e567)
 
-![Image](https://pica.zhimg.com/50/v2-aaef97380d16cffe590c2d6160bdfa3c_720w.jpg?source=2c26e567)
+![Image](https://pic1.zhimg.com/50/v2-aaef97380d16cffe590c2d6160bdfa3c_720w.jpg?source=2c26e567)
 
 但凡野生物种还长得鲜艳夺目的，那都不可能是省油的灯。
 
