--- a/待归档/笨功夫.md
+++ b/待归档/笨功夫.md
@@ -2,7 +2,7 @@
 [为什么大凉山接受了那么多捐助依然那么穷？](https://www.zhihu.com/question/34228945/answer/3446655008)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2024-03-30]
+> Last update: [编辑于 2024-04-04]
 > Link:
 > Category: #【答集】/04-社科答集 
 > Tag: 
@@ -11,7 +11,7 @@
 
 世界上绝大多数没有地方中央集权存在的贫困地区的贫困现象的消除，都不是靠“文明进入落后地区，帮助落后地区发展“这样的方式完成的。
 
-而是靠两大基本机制——一个是不断将接触到富裕生活的当地居民吸纳进富裕地区生活，使得当地地产不断被出售，渐渐更换了地主；一个是靠杀，直接把原住民杀光。
+而是靠两大基本机制——一个是不断将接触到富裕生活的当地居民吸纳进富裕地区生活，使得当地地产不断被出售，渐渐更换了地主；一个是靠杀，直接把原住民杀光或者逼迫原住民逃亡。
 
 而有中央集权的地区，就往往靠他们本土的知识精英利用自己已有的权力和社会结构，积极的实现自我革命。例如中日的现代化。
 
@@ -29,7 +29,7 @@
 
 大凉山为什么难？
 
-难就难在我们要摸索一条“不靠杀”也不靠“把人引诱到大城市脱籍”的路。
+难就难在我们要摸索一条不靠“杀和迁”的路。
 
 这个办法是极其可贵的，因为这才是真正解决全球第三世界贫困问题的要害。全球现在仍然处在极端贫困中的几乎所有的地区，都属于这种情况——交通不便、语言不通、社会结构松散，然而人口却并不少。
 
@@ -54,3 +54,17 @@
 但这难题属于“聪明人的笨功夫”——做成了功德无量，价比真金。
 
 [「聪明人更要下笨功夫」是什么意思？](https://www.zhihu.com/question/20782378/answer/1331306390?utm_psn=1757161381542285312)
+
+--------------------
+
+为什么“大城市吸收”不能解决问题？
+
+因为大城市、富裕国家的吸收量是有限的，尤其是对缺少基础教育的人口。
+
+硬来了，汉语/英语都不会说，完全理解不了商品社会的基本规则和设计礼仪，根本找不到工作，生活压力必然导致当地形成“小海地”、“小古巴”、“小哥伦比亚”这样的黑帮聚居区，以贩毒、卖淫、走私、暴力犯罪为生。
+
+但实际上，以大城市的治安力度，要么这就约等于送ta们上了黄泉路——不是在交火中击毙就是牢底坐穿甚至处决，要么就是两败俱伤——这些移民很多一辈子不出自己的聚居点，而很多沦为了酗酒、吸毒、赌博的牺牲品，而且从很小就开始犯罪生涯，而大城市本身则深受犯罪侵害，渐渐在城区形成“生人勿进区”。
+
+因此，不能指望“大量吸收”可以解决问题。
+
+前面说的“迁”，其实主要是指把少数民族往更蛮荒、凶险的偏远之地驱逐或强迫迁移，类似“印第安保留地”、“高山族”这类。
