--- a/待归档/腾蛇.md
+++ b/待归档/腾蛇.md
@@ -2,7 +2,7 @@
 [为啥山海经好多神仙身上总挂着蛇或者手里总握着蛇呢？](https://www.zhihu.com/question/600275140/answer/3446788640)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2024-03-29]
+> Last update: [编辑于 2024-04-01]
 > Link:
 > Category: #【答集】/05-科学答集 
 > Tag: 
@@ -11,9 +11,9 @@
 
 因为蛇这个动物太不寻常了，你没法不对它另眼相看。
 
-1）蛇无足而能行、无爪而能攀、无鳍而能游，甚至无翅翼而能飞。
+1）蛇无足而能行、无爪而能攀、无鳍而能游，甚至无翼而能飞。
 
-[飞蛇​b23.tv/3eNDVpW](https://link.zhihu.com/?target=https%3A//b23.tv/3eNDVpW)
+[飞蛇](https://link.zhihu.com/?target=https%3A//b23.tv/3eNDVpW)
 
 像毛毛虫那样伸缩移动人类是可以理解的，但是身体几乎没有可见的动作就可以“无动力”的运动本身就非常反常了。
 
