--- a/待归档/最后时光.md
+++ b/待归档/最后时光.md
@@ -2,7 +2,7 @@
 [得知病情，癌症晚期老人病房赶书稿，女儿说「每个人都有权安排最后时光」。如果生命进入倒计时，你如何度过？](https://www.zhihu.com/question/651566209/answer/3454431674)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2024-04-04]
+> Last update: [编辑于 2024-04-12]
 > Link:
 > Category: #【答集】/00-致读者 
 > Tag: 
@@ -14,3 +14,9 @@
 因为我大概率是意外死亡。
 
 类似工作中猝死 / 工作中被刺杀 / 工作中被酒驾撞死这类。
+
+--------------------
+
+这是好事，不要纠结。
+
+一般人想求还求不到呢。
