--- a/【文章目录】/【0 - 总类】/000 - 特藏 - 致读者/致读者.md
+++ b/【文章目录】/【0 - 总类】/000 - 特藏 - 致读者/致读者.md
@@ -19,6 +19,12 @@
 
 [读者摘录集锦](https://www.zhihu.com/question/62598434/answer/3130879727)
 
+一个由我通过素问 （[sooon.ai](https://link.zhihu.com/?target=http%3A//sooon.ai) ）获取和维护的问题列表：
+
+[9adgq：什么是“同问”？](https://zhuanlan.zhihu.com/p/693337545?utm_psn=1769491364902023169)
+
+[9adgq：素问问题列表](https://zhuanlan.zhihu.com/p/695705396?utm_psn=1769497630848405504)
+
 --------------------
 
 关注我的人需要知道几个tip：
