--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原则/克制真爱.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原则/克制真爱.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2024-03-10]
 > Link:
 > Category: #【答集】/01-家族答集 #【答集】/03-第一性 #【答集】/09-神学答集 
-> Tag: 
+> Tag: #1-家族/1E-两性/1-亲密关系/1a-交往准则/贪与爱 #3-信仰/3A-Caritas/1-爱 
 > 评论区:
 > 泛讨论:
 
