--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/态度与伦理/一体两面.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/态度与伦理/一体两面.md
@@ -4,8 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2024-02-28]
 > Link:
-> Category:  #【答集】/02-企管答集 
-> Tag: 
+> Category:  #【答集】/02-企管答集 #【答集】/01-家族答集 
+> Tag: #2-事业/2C-职业/1-态度与伦理 #1-家族/1B-处世/1-内务 
 > 评论区:
 > 泛讨论:
 
