--- a/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/参天.md
+++ b/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/参天.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2024-02-28]
 > Link:
 > Category: #【答集】/01-家族答集 
-> Tag: 
+> Tag: #4-世界史/4A-社科/教育 #2-事业/2A-功夫/1-核心能力/旷野生存 
 > 评论区:
 > 泛讨论:
 
