--- a/【文章目录】/【5 - 社会科学】/550 - 经济/555 - 产业 & 工业/时间轴平移.md
+++ b/【文章目录】/【5 - 社会科学】/550 - 经济/555 - 产业 & 工业/时间轴平移.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2024-02-26]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/07-军事技术与艺术 
-> Tag: 
+> Tag: #2-事业/2A-功夫/1-核心能力/学数学 #4-世界史/4A-社科/产业 
 > 评论区:
 > 泛讨论:
 
