--- a/【文章目录】/【7 - 世界史地】/730 - 亚洲史地/732 - 韩国/地球梦.md
+++ b/【文章目录】/【7 - 世界史地】/730 - 亚洲史地/732 - 韩国/地球梦.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2024-03-03]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/13-百年未有之变局 
-> Tag: 
+> Tag: #4-世界史/4A-社科/医疗
 > 评论区:
 > 泛讨论:
 
