--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/礼节规范/原谅.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/礼节规范/原谅.md
@@ -2,7 +2,7 @@
 [你会选择原谅伤害过你的人吗？](https://www.zhihu.com/question/412000560/answer/1699737693?utm_content=card_share)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-05-15]
+> Last update: [编辑于 2024-05-21]
 > Link: [[道歉]] [[同情的资格]] [[爱]]
 > Category: #【答集】/01-家族答集
 > Tag: #1-家族/1A-内外/1-内在建设/1b-修养 #3-信仰/3A-Caritas/1-爱 #5-专题合集/合集1-概念与定义
@@ -117,7 +117,7 @@
 
 **难不是难在付出，而是难在被辜负的痛苦**。
 
-人往往贪图爱另一个人的巨大享受，而假装辜负的可能性和深刻不存在。
+人往往贪图爱另一个人的巨大享受，而假装辜负的可能性仿佛不存在。
 
 你有几次机会以“无知”自辨，但超过一定的限度，被辜负而无法接受的责任就在你的头上。
 
