--- a/【文章目录】/【8 - 语言文学类】/810 - 文学总论/权力的游戏.md
+++ b/【文章目录】/【8 - 语言文学类】/810 - 文学总论/权力的游戏.md
@@ -2,7 +2,7 @@
 [如何写出像权力的游戏这样的小说？](https://www.zhihu.com/question/60350841/answer/2565992747)
 
 > Author: #0-Anonymity
-> Last update: [发布于 2022-07-09]
+> Last update: [编辑于 2024-05-24]
 > Link: [[文笔]] [[三流作家]]
 > Category: #【答集】/08-文艺答集  #【答集】/14-人与智能
 > Tag: #4-世界史/4G-文娱/1-文学 #2-事业/2A-功夫/1-核心能力/学语文
@@ -39,7 +39,7 @@
 
 时间自然酝酿一切伟大的情节，对于平淡的时段按下快进键就行了。
 
----
+--------------------
 
 别盘算着把我直接放进去。
 
