--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/择偶/你说我听.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/择偶/你说我听.md
@@ -1,8 +1,8 @@
-# 沟通偏差
+# 你说我听
 [吵架男朋友控制不住情绪自残我该怎么办？](https://www.zhihu.com/question/625523384/answer/3252323141)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-10-17]
+> Last update: [编辑于 2024-06-02]
 > Link:
 > Category: #【答集】/03-第一性
 > Tag: #1-家族/1B-处世/2-外务/2f-表达意愿 #1-家族/1E-两性/1-亲密关系/1b-交往案例/恋爱
