--- a/待归档/不知天地.md
+++ b/待归档/不知天地.md
@@ -2,7 +2,7 @@
 [大多数人是否生活在不自知的地狱中？](https://www.zhihu.com/question/655140780/answer/3489520842)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2024-05-06]
+> Last update: [编辑于 2024-06-03]
 > Link:
 > Category: #【答集】/04-社科答集 
 > Tag: 
@@ -23,15 +23,13 @@
 
 批评你的原本是想开除你的。
 
-这倒不一定是因为ta们全都宅心仁厚——当然有是有的——
-
-而是因为天有好生之德，人莫敢轻违妄犯，恐遭天谴。
+这倒不一定是因为ta们全都宅心仁厚——当然有是有的——而是因为天有好生之德，人莫敢轻违妄犯，恐遭天谴。
 
 所以所有的恶意，人都自动减一等二等发作。
 
 天有好生之德，这已经是天堂了。
 
-你的问题是在天堂却没有天堂的体验，没有得到天堂的服务，就像老人免费抽了一台手机但却不知道怎么用它买菜。
+**你的问题是在天堂却没有天堂的体验，没有得到天堂的服务**，就像老人免费抽了一台手机但却不知道怎么用它买菜。
 
 这个要慢慢学。
 
