--- a/待归档/羞于启齿.md
+++ b/待归档/羞于启齿.md
@@ -2,16 +2,24 @@
 [为什么我总是习惯性的不去表达自己的诉求，并以提出要求展现欲望而感到尴尬羞耻？](https://www.zhihu.com/question/478825422/answer/3515463515)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2024-05-31]
+> Last update: [编辑于 2024-06-02]
 > Link:
 > Category: #【答集】/01-家族答集 
 > Tag: 
 > 评论区:
 > 泛讨论:
 
-记住了，成年人从来不、也不应该“表达自己的诉求”。
+记住了，成年人从来不、也不应该“表达自己的诉求”，成人只谈**需求**。
 
 你到底要什么，对所有人都应该只有一个片面的猜测，它的全貌对所有人都应该是一个难解的谜。
+
+具体一点举个例子，譬如成年人心里要的是100，而要到达100这个目标，其中有1，2，3…………98，99个必要子目标。而成年人在正常情况下会告诉人的需求会是“我要人帮我完成0.7 / 1.2 / 2.3，具体要求是xxxx， 报酬是yyy”。而他们会对人宣布的“雄心壮志”会是“我计划在年内要实现10”。
+
+即使告诉人10这个“年内目标”，其实也仅仅只是为了帮助那些潜在的合作者去理解那些1.1、1.6是为何而存在、以便人们收取了报酬之后能给出更有效的成果。
+
+那个真正的终极目标，那个100，实际上是属于成人自己的秘密——甚至，在很多时候，人自己也不确切的知道那个100的具体内容，而仅仅只有一个模糊的向往。
+
+**但是儿童会说“我要100，给我100”。**
 
 发现没有？马斯克的诉求到底是什么？普京的诉求到底是什么？你只看到无数的节目喋喋不休的分析，却从没有见过谁能给你绝对可靠的谜底。甚至就算他们自己站出来说“我要如何如何”你都不会信。
 
