--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/禁忌/紧追不放.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/禁忌/紧追不放.md
@@ -2,7 +2,7 @@
 [为什么垃圾男追求 遭到女方委婉拒绝 还继续追不放弃呢?](https://www.zhihu.com/question/397579584/answer/1269935154)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2022-03-15]
+> Last update: [编辑于 2024-06-15]
 > Link: [[恋爱原理]] [[尊重]] [[不抱怨]] [[爱的痛苦]] [[爱的好处]] [[爱情]] [[爱的资格]] [[无条件的爱]] [[优秀与被爱]] [[前途与爱情]] [[理性的爱]] [[不配被爱]] [[爱怕了]] [[爱无筹码]] [[爱与自由]] [[爱与神哲学]]
 > Category: #【答集】/03-第一性
 > Tag: #1-家族/1E-两性/1-亲密关系/1a-交往准则/银子弹 #1-家族/1E-两性/1-亲密关系/1a-交往准则/贪与爱
@@ -31,7 +31,7 @@
 
 所以，要设立排除条件，必须是一辈子都不会妥协的条件。是那种**没得妥协的、非身份的、与做人原则、与爱的本质直接相连的条件**。
 
-这就是为什么“不尊重我明确的拒绝的意愿”是一条绝对排出条件。而且只要这一条就够了。
+这就是为什么“不尊重我明确的拒绝的意愿”是一条绝对排除条件。而且只要这一条就够了。
 
 我拒绝你，不是因为你是农村男，而是因为我不接受口说爱我的人不尊重我拒绝的意愿。
 
