--- a/【文章目录】/【7 - 世界史地】/740 - 欧洲史地/748 - 俄罗斯/俄罗斯艺术之谜.md
+++ b/【文章目录】/【7 - 世界史地】/740 - 欧洲史地/748 - 俄罗斯/俄罗斯艺术之谜.md
@@ -2,7 +2,7 @@
 [为什么俄国在艺术领域很有成就？](https://www.zhihu.com/question/317708657/answer/2977792415)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-04-11]
+> Last update: [编辑于 2024-06-21]
 > Link: [[俄罗斯]]
 > Category: #【答集】/08-文艺答集
 > Tag: #4-世界史/4D-历史 #4-世界史/4F-文艺/1-文化
@@ -15,7 +15,7 @@
 
 俄罗斯人最根本的自我认同，是“基督正教会的东方正统继承人”，是真正的罗马帝国——拜占庭东罗马帝国——的遗孤和唯一血脉。东斯拉夫民族的这一分支，只是因为上帝的拣选而成为特殊存在，如同旧约拣选了犹太人、新约拣选了罗马人一样，俄罗斯民族自认是第三世代的上帝选民。
 
-这才是俄罗斯民族整个精神内核的底色、也是俄罗斯人复杂而矛盾的特殊气质的根子——某种意义上讲，苏联理想会在俄罗斯身上包防水，跟这种“舍我之外，已别无拯救”的“救世情结”和“为义牺牲”的渴望有深刻的关系。
+这才是俄罗斯民族整个精神内核的底色、也是俄罗斯人复杂而矛盾的特殊气质的根子——某种意义上讲，苏联理想会在俄罗斯身上爆发出来，跟这种“舍我之外，已别无拯救”的“救世情结”和“为义牺牲”的渴望有深刻的关系。
 
 而俄罗斯民族心底里掩饰不住的骄傲之气，也跟这个“自认最后正统”的自觉有深刻关系。
 
