--- a/待归档/汉语天下.md
+++ b/待归档/汉语天下.md
@@ -1,8 +1,8 @@
-# 书同文
+# 汉语天下
 [韩国恢复使用汉字的几率多大？](https://www.zhihu.com/question/61999549/answer/3419158547)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2024-03-05]
+> Last update: [编辑于 2024-06-18]
 > Link:
 > Category: #【答集】/13-百年未有之变局 #【答集】/04-社科答集 
 > Tag: 
