--- a/待归档/解决问题的态度.md
+++ b/待归档/解决问题的态度.md
@@ -2,7 +2,7 @@
 [「忍耐退让」和「当场爆发」哪个比较好解决问题？](https://www.zhihu.com/question/658500955/answer/3529099858)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2024-06-13]
+> Last update: [编辑于 2024-06-18]
 > Link:
 > Category: #【答集】/01-家族答集 
 > Tag: 
@@ -23,7 +23,7 @@
 
 没有一丝的怒骂和嘶吼，全是敬语谦词，但却足以让受方感受到“轻松诙谐”的气氛消散殆尽，不得不端正姿势、收起一切嬉笑狎昵之心，小心谨慎以同等大礼相敬。
 
-那是一种透过高度严肃体现出的压力，一种“如果你把我下面的话当成玩笑，你要最好让家里人做好心理准备”的近乎遗体告别般的高度礼貌。
+那是一种透过高度严肃体现出的压力，一种“如果你把我下面的话当成玩笑，你最好通知家里人做好心理准备”的近乎遗体告别般的高度礼貌。
 
 这背后打底的不是什么“当心我失控”的可悲威胁，而是“我可以轻松的取消你本来就没有权利主张的支持”的实力。
 
