--- a/【文章目录】/【5 - 社会科学】/540 - 社会学/548 - 社会救济/三慈善.md
+++ b/【文章目录】/【5 - 社会科学】/540 - 社会学/548 - 社会救济/三慈善.md
@@ -2,7 +2,7 @@
 [如何看待up主本喵叫兔兔，猫德研究员小杨等的猫德医院开业三个月以来被曝光遗弃二十多只猫？](https://www.zhihu.com/question/549349236/answer/2646164738)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-09-13]
+> Last update: [编辑于 2024-06-22]
 > Link: [[慈善]] [[恩]]
 > Category: #【答集】/01-家族答集
 > Tag: #3-信仰/3A-Caritas/2-慈善
@@ -14,6 +14,8 @@
 1）匿名。
 
 匿名的本质是自己潜伏在暗处，主动出击。事了拂衣去，深藏身与名。只有我帮你，没有你找我。这样就毫无后患，无忧无虑。
+
+我就是想恨你，一想到我根本没让你知道过我是谁，你是逻辑严谨的完全无辜，我就自然而然没法恨了。
 
 2）限期限额。
 
