--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/文责意识/条理.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/文责意识/条理.md
@@ -2,9 +2,9 @@
 [如何解决思维混乱、讲话没条理的情况？](https://www.zhihu.com/question/30173526/answer/1556806982)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-05-16]
+> Last update: [编辑于 2024-07-02]
 > Link: [[学好语文]] [[逻辑思维]] [[能力]]
-> Category: #【答集】/01-家族答集
+> Category: #【答集】/01-家族答集 #【答集】/03-第一性 
 > Tag: #1-家族/1B-处世/2-外务/2d-文责意识 #2-事业/2A-功夫/1-核心能力/学语文 #2-事业/2A-功夫/1-核心能力/学逻辑 #2-事业/2A-功夫/1-核心能力/做计划
 > 评论区:
 > 泛讨论:
@@ -41,6 +41,8 @@
 
 **这也是为什么有的人话轻如鸿毛，有的人的话重有千钧的奥秘所在。**
 
+--------------------
+
 其实，这里面的每一个问题追根到底都是非常深的学术问题。
 
 你说的每一句话，都如同这样还有更深的分解和解释的必要。最终它们兜兜转转会回到一些最基本的问题上——**什么是应该的？什么是好的？什么是存在的？以及它是谁？而这每一个问题的答案，都是高度的分析能力和长期的阅历反省的综合结果。**
@@ -67,6 +69,8 @@
 
 人类那点“学问”，其实根本不该占用人那么多青春的。
 
+--------------------
+
 有人看出来了——这似乎就是“司法解释”的风格。
 
 **不错，因为每一次有效的沟通，本质上都是一次“临时约法”。**
@@ -89,7 +93,7 @@
 
 所以ta们最终只好称孤道寡。
 
-一个“成功的人生”，不是指“亿万家财”，“声明卓著”，而是指一个仁慈的君主以ta简洁、准确、稳定而又有效的约法所行的贤明的治理，以至于ta所行之处，必有鲜花盛开，百废俱兴。所居住的人们没有恐惧，却有面对自我的勇气和面对未知的信心。
+一个“成功的人生”，不是指“亿万家财”，“声名卓著”，而是指一个仁慈的君主以ta简洁、准确、稳定而又有效的约法所行的贤明的治理，以至于ta所行之处，必有鲜花盛开，百废俱兴。所居住的人们没有恐惧，却有面对自我的勇气和面对未知的信心。
 
 能明白这一点，把这一点嵌入你自己的本能，你一定前途无量。
 
