--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/修养/两只小小鸟.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/修养/两只小小鸟.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2024-04-08]
 > Link:
 > Category: #【答集】/01-家族答集 
-> Tag: 
+> Tag: #1-个人成长/1-内在建设/1b-修养 #2-亲密关系/1-交往准则/1f-银子弹
 > 评论区:
 > 泛讨论:
 
