--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原则/不问原因.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原则/不问原因.md
@@ -1,8 +1,8 @@
-# 一夫一妻
+# 不问原因
 [为什么有的女人会甘愿当情妇？](https://www.zhihu.com/question/21236814/answer/2919907790)
 
 > Author: #Anonymity
-> Last update: [编辑于 2023-03-03]
+> Last update: [编辑于 2024-10-22]
 > Link:
 > Category: #【答集】/01-家族答集
 > Tag: #2-亲密关系/2-交往案例/2b-论婚姻 
