--- a/【文章目录】/【4 - 应用科学】/490 - 商学/494 - 企业管理/软领导.md
+++ b/【文章目录】/【4 - 应用科学】/490 - 商学/494 - 企业管理/软领导.md
@@ -1,8 +1,8 @@
-# 软弱者领导
+# 软领导
 [性格软弱的人怎样做领导?](https://www.zhihu.com/question/382790054/answer/1324070505)
 
 > Author: #Anonymity
-> Last update: [编辑于 2020-12-16]
+> Last update: [编辑于 2024-10-22]
 > Link: [[领导力特征]] [[领导]]
 > Category: #【答集】/02-企管答集
 > Tag: #4-职业发展/4-管理者素质 #3-家庭伦理/2-亲子关系/2b-家庭教育 #1-个人成长/5-核心能力/5b-学逻辑
