--- a/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/翼护.md
+++ b/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/翼护.md
@@ -1,8 +1,8 @@
-# 净输出者
+# 翼护
 [父母应该在饭局上维护孩子吗？](https://www.zhihu.com/question/419829368/answer/1914445833)
 
 > Author: #Anonymity
-> Last update: [发布于 2021-05-31]
+> Last update: [编辑于 2024-10-22]
 > Link: [[财富观]] [[你的事]]
 > Category: #【答集】/01-家族答集
 > Tag: #3-家庭伦理/2-亲子关系/2b-家庭教育 
@@ -45,13 +45,13 @@
 
 ta们唯一学会的就是你的无能和软弱。
 
-解释、帮腔、作证，“维护”，代为辩解，**都是建立在首先承认了对方的审判权的基础上的**。
+解释、帮腔、作证，“维护”，代为辩解，**都是建立在首先承认了对方的审判权的基础上的。**
 
 一个人**自授审判权**来审判你，而你加以接受，你的人格就被你自己亵渎了。
 
 因为一个审判者的位格是绝对高于被审判者的。只有你自己认可的审判者，才因为ta所代行的实际上是你的自我审判，ta只是受托人，这时才不构成人格的丧失。
 
-**你在处理的不是一个子女被攻击的问题，而是一个人格被侵犯的问题。**
+**你在处理的不是一个子女被攻击的问题，而是一个人格被侵犯的问题**。
 
 你需要捍卫的不是子女的面子和自尊心，而是你自己的人格。
 
