--- a/【文章目录】/【5 - 社会科学】/520 - 教育/社会教育/潜藏无形.md
+++ b/【文章目录】/【5 - 社会科学】/520 - 教育/社会教育/潜藏无形.md
@@ -1,8 +1,8 @@
-# 隐形权力
+# 潜藏无形
 [如何看待对于「给予导师决定博士生、硕士生能否毕业的自主权」的提议，教育部表示「意义重要，将充分采纳」？](https://www.zhihu.com/question/422912586/answer/1496227069)
 
 > Author: #Anonymity
-> Last update: [编辑于 2020-09-27]
+> Last update: [编辑于 2024-10-22]
 > Link: [[骇客帝国]] [[【文章目录】/【1 - 哲学类】/190 - 伦理学/195 - 社会伦理/生而平等]]
 > Category: #【答集】/02-企管答集
 > Tag: #5-社会科学/1-社会学/1b-社会问题/社会教育 
