--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/交友之道/自愿者自由.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/交友之道/自愿者自由.md
@@ -1,8 +1,8 @@
-# 公平标准
+# 自愿者自由
 [电视剧《繁花》里的宝总和玲子调情，又和汪小姐暧昧，他这种行为是不是很渣？](https://www.zhihu.com/question/637249116/answer/3397872179)
 
 > Author: #Anonymity
-> Last update: [编辑于 2024-02-16]
+> Last update: [编辑于 2024-10-22]
 > Link:
 > Category: #【答集】/08-文艺答集 
 > Tag: #1-个人成长/3-处世之道/3f-交友准则 #6-文化艺术/3-影视与戏剧 
