--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/补强原则/知我苦.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/补强原则/知我苦.md
@@ -1,8 +1,8 @@
-# 体验痛苦
+# 知我苦
 [如果你拥有让别人体验你的痛苦的能力，会发生什么事情？](https://www.zhihu.com/question/470883543/answer/1986233160)
 
 > Author: #Anonymity
-> Last update: [编辑于 2021-07-08]
+> Last update: [编辑于 2024-10-22]
 > Link: [[理解的原理]] [[爱]] [[同情的资格]] [[不羡慕]]
 > Category: #【答集】/01-家族答集
 > Tag: #_专题合集/合集6-个人信仰/A-Caritas/1-爱 #1-个人成长/3-处世之道/3b-补强原则
