--- a/【文章目录】/【3 - 自然科学】/390 - 人类学/人类任务.md
+++ b/【文章目录】/【3 - 自然科学】/390 - 人类学/人类任务.md
@@ -1,8 +1,8 @@
-# 终极目标
+# 人类任务
 [人类社会的终极目标是什么？](https://www.zhihu.com/question/419458902/answer/1467759400)
 
 > Author: #Anonymity
-> Last update: [发布于 2020-09-12]
+> Last update: [编辑于 2024-10-22]
 > Link: [[厌倦]] [[自然法]]
 > Category: #【答集】/04-社科答集
 > Tag: #1-个人成长/5-核心能力/5c-学哲学/哲学总论 
