--- a/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/不道歉的小朋友.md
+++ b/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/不道歉的小朋友.md
@@ -1,8 +1,8 @@
-# 公平因果
+# 不道歉的小朋友
 [当孩子问「为什么小朋友不小心碰到我，却不向我道歉」时，该怎么回答呢？](https://www.zhihu.com/question/468899632/answer/2173849616)
 
 > Author: #Anonymity
-> Last update: [编辑于 2021-10-17]
+> Last update: [编辑于 2024-10-22]
 > Link: [[学好会计]] [[道德]] [[尊重]] [[受欢迎]] [[被讨厌]] [[自然法]] [[愚蠢的不尊重]] [[敌人]] [[自由意志]] [[与世界为敌]] [[精神资本家]]
 > Category: #【答集】/01-家族答集
 > Tag: #3-家庭伦理/2-亲子关系/2b-家庭教育  #1-个人成长/5-核心能力/5e-数学与会计
