--- a/【文章目录】/【9 - 艺术类】/900 - 艺术总论/哲学的艺术.md
+++ b/【文章目录】/【9 - 艺术类】/900 - 艺术总论/哲学的艺术.md
@@ -1,8 +1,8 @@
-# 艺术与哲学
+# 哲学的艺术
 [艺术是否会终结于哲学？](https://www.zhihu.com/question/307742927/answer/567507873)
 
 > Author: #Anonymity
-> Last update: [编辑于 2020-07-06]
+> Last update: [编辑于 2024-10-22]
 > Link: [[雅俗共赏]] [[艺术本质]]
 > Category: #【答集】/08-文艺答集
 > Tag: #6-文化艺术/1-艺术总论
