--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/160 - 形而上学总论/论天赋/元天赋.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/160 - 形而上学总论/论天赋/元天赋.md
@@ -1,8 +1,8 @@
-# 天赋
+# 元天赋
 [坚持没有天赋的梦想是浪费时间吗？](https://www.zhihu.com/question/529222173/answer/2522013890)
 
 > Author: #Anonymity
-> Last update: [编辑于 2022-06-10]
+> Last update: [编辑于 2024-10-31]
 > Link: [[【文章目录】/【1 - 哲学类】/190 - 伦理学/195 - 社会伦理/天赋特权]] [[天赋 1]] [[瞧不起努力]] [[坚持]]
 > Category: #【答集】/01-家族答集
 > Tag: #_专题合集/合集1-概念与定义 #1-个人成长/5-核心能力/5a-核心能力总论/论功夫 
