--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/160 - 形而上学总论/论天赋/天赋 1.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/160 - 形而上学总论/论天赋/天赋 1.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2024-09-24]
-> Link: [[【文章目录】/【1 - 哲学类】/190 - 伦理学/195 - 社会伦理/天赋特权]] [[高估]] [[蠢聪明]] [[悟性]] [[一点就透]] [[厉害思维]] [[极度聪明]] [[自视]] [[精英]] [[求学]] [[学习的快乐]] [[高等教育]] [[能力与责任]] [[天赋 2]]
+> Link: [[【文章目录】/【1 - 哲学类】/190 - 伦理学/195 - 社会伦理/天赋特权]] [[高估]] [[蠢聪明]] [[悟性]] [[一点就透]] [[厉害思维]] [[极度聪明]] [[自视]] [[精英]] [[求学]] [[学习的快乐]] [[高等教育]] [[能力与责任]] [[元天赋]]
 > Category: #【答集】/01-家族答集
 > Tag:  #_专题合集/合集1-概念与定义 #1-个人成长/3-处世之道/3b-补强原则 #1-个人成长/5-核心能力/5a-核心能力总论/论功夫 
 > 评论区:
