--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论健康/脑休息.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论健康/脑休息.md
@@ -1,8 +1,8 @@
-# 休息
+# 脑休息
 [脑力劳动者如何更好的休息？](https://www.zhihu.com/question/35484585/answer/2114331418)
 
 > Author: #Anonymity
-> Last update: [编辑于 2023-10-27]
+> Last update: [编辑于 2024-10-31]
 > Link: [[懒散]] [[学与玩]] [[学习的快乐]] [[时间不够]] [[粗心]] [[悟性]] [[精神资本家]] [[穷开心]] [[世面]]
 > Category: #【答集】/01-家族答集
 > Tag: #1-个人成长/2-外在管理/2a-身心健康 #_专题合集/合集2-一些推荐 
