--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/人生观/大钱大官.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/人生观/大钱大官.md
@@ -1,8 +1,8 @@
-# 人生意义
+# 大钱大官
 [若一辈子没有赚大钱，当大官，和自己爱的人在一起（哪怕一次），活着能算有意义吗？](https://www.zhihu.com/question/24561532/answer/3395220875)
 
 > Author: #Anonymity
-> Last update: [编辑于 2024-02-14]
+> Last update: [编辑于 2024-10-26]
 > Link:
 > Category: #【答集】/01-家族答集 
 > Tag: #1-个人成长/4-心理与疗愈/4c-抑郁成因 #1-个人成长/1-内在建设/1a-三观/人生观 
