--- a/待归档/出力不出钱.md
+++ b/待归档/出力不出钱.md
@@ -1,8 +1,8 @@
-# 出钱出力
+# 出力不出钱
 [蓝天救援号称纯公益，不收任何费用，成员没有工资，我很好奇为什么有人加入?](https://www.zhihu.com/question/470614895/answer/5160619039)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2024-10-14]
+> Last update: [编辑于 2024-10-31]
 > Link:
 > Category: #【答集】/04-社科答集 
 > Tag: 
