--- a/【本周更新】/举起手来，缴枪不杀.md
+++ b/【本周更新】/举起手来，缴枪不杀.md
@@ -1,7 +1,7 @@
 # 举起手来，缴枪不杀
 [怎么看待一个基本没有朋友，一直独来独往的人呢？](https://www.zhihu.com/question/461019226/answer/23998233404)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-06]
 > Link:
 > Category: #【答集】/01-家族答集
