--- a/【本周更新】/取我苗字.md
+++ b/【本周更新】/取我苗字.md
@@ -1,7 +1,7 @@
 # 取我苗字
 [晚辈起名和我前两个字一模一样，我该不该介意?](https://www.zhihu.com/question/666130607/answer/24003965612)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-06]
 > Link:
 > Category: #【答集】/01-家族答集
