--- a/【本周更新】/大麻烦.md
+++ b/【本周更新】/大麻烦.md
@@ -1,7 +1,7 @@
 # 大麻烦
 [如何看待特朗普宣布赢得2024年美国大选？](https://www.zhihu.com/question/3307746073/answer/27689051428)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-10]
 > Link:
 > Category: #【答集】/13-百年未有之变局
