--- a/【本周更新】/实习生.md
+++ b/【本周更新】/实习生.md
@@ -1,7 +1,7 @@
 # 实习生
 [如何看待金星发文向广州文旅局讨要说法?](https://www.zhihu.com/question/1950221207/answer/25087159639)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-07]
 > Link:
 > Category: #【答集】/04-社科答集
