--- a/【本周更新】/小上帝的前女友.md
+++ b/【本周更新】/小上帝的前女友.md
@@ -1,7 +1,7 @@
 # 小上帝的前女友
 [你会娶一个非常自恋，并且以自我为中心的女孩子做老婆吗？](https://www.zhihu.com/question/431661610/answer/25733180634)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-09]
 > Link:
 > Category: #【答集】/03-第一性
