--- a/【本周更新】/没家教和不礼貌.md
+++ b/【本周更新】/没家教和不礼貌.md
@@ -1,7 +1,7 @@
 # 没家教和不礼貌
 [如何对待缺乏家教而没有礼貌，但也不存在恶意的人?](https://www.zhihu.com/question/349351152/answer/27316601603)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-10]
 > Link:
 > Category: #【答集】/01-家族答集
