--- a/【本周更新】/爱以介意为耻.md
+++ b/【本周更新】/爱以介意为耻.md
@@ -1,7 +1,7 @@
 # 爱以介意为耻
 [男朋友想和我同居，我拒绝了，好像不能继续在一起了，可我想继续在一起该怎么办?](https://www.zhihu.com/question/468721157/answer/25597165075)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-08]
 > Link:
 > Category: #【答集】/01-家族答集 #【答集】/03-第一性
