--- a/【本周更新】/爱在珍珠港.md
+++ b/【本周更新】/爱在珍珠港.md
@@ -1,7 +1,7 @@
 # 爱在珍珠港
 [女生觉得“潘、驴、邓、小、闲”哪个最重要？](https://www.zhihu.com/question/662447145/answer/22980927170)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-04]
 > Link:
 > Category: #【答集】/01-家族答集 #【答集】/03-第一性
