--- a/【本周更新】/真人不语.md
+++ b/【本周更新】/真人不语.md
@@ -1,7 +1,7 @@
 # 真人不语
 [为什么越长大越遇不到真诚的人？](https://www.zhihu.com/question/653334528/answer/21523835548)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-03]
 > Link:
 > Category: #【答集】/01-家族答集
