--- a/【本周更新】/谁来同情.md
+++ b/【本周更新】/谁来同情.md
@@ -1,7 +1,7 @@
 # 谁来同情
 [90后老师越来越多，按理说这些老师的读书生涯应该跟现在的学生能够共情，但为什么教育环境并没多大改变？](https://www.zhihu.com/question/661057120/answer/21925509448)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-03]
 > Link:
 > Category: #【答集】/01-家族答集
