--- a/待归档/一二三四，二二三四.md
+++ b/待归档/一二三四，二二三四.md
@@ -1,7 +1,7 @@
 # 一二三四，二二三四
 [台积电成为第一家市值突破 1 万亿美元的亚洲科技公司，这意味着什么？](https://www.zhihu.com/question/1242528316/answer/10542449827)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-21]
 > Link:
 > Category: #【答集】/02-企管答集 
