--- a/待归档/不要不要就不要.md
+++ b/待归档/不要不要就不要.md
@@ -1,7 +1,7 @@
 # 不要不要就不要
 [为什么现在「理中客」被污名化了？](https://www.zhihu.com/question/63034460/answer/18283876073)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-30]
 > Link:
 > Category: #【答集】/01-家族答集 
