--- a/待归档/不锈钢毛巾.md
+++ b/待归档/不锈钢毛巾.md
@@ -1,7 +1,7 @@
 # 不锈钢毛巾
 [不锈钢能否拉成丝线然后纺织成衣服？](https://www.zhihu.com/question/2232881941/answer/18347587936)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-30]
 > Link:
 > Category: #【答集】/01-家族答集 #【答集】/05-科学答集 
