--- a/待归档/亏得少.md
+++ b/待归档/亏得少.md
@@ -1,7 +1,7 @@
 # 亏得少
 [蔚来汽车再获33亿融资，上市六年亏损已超970亿元，为何还能持续融资？](https://www.zhihu.com/question/1651797984/answer/14173155509)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-25]
 > Link:
 > Category: [最近更新]
