--- a/待归档/地塔.md
+++ b/待归档/地塔.md
@@ -1,7 +1,7 @@
 # 地塔
 [在小县城事业编，越来越接受不了自己和北京同学的差距，怎么办？](https://www.zhihu.com/question/310922906/answer/19984344068)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-01]
 > Link:
 > Category: #【答集】/01-家族答集 
