--- a/待归档/宽容的诅咒.md
+++ b/待归档/宽容的诅咒.md
@@ -1,7 +1,7 @@
 # 宽容的诅咒
 [为什么在社会上对前科的鄙视这么严重？](https://www.zhihu.com/question/266232601/answer/17260385896)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-29]
 > Link:
 > Category: #【答集】/04-社科答集 
