--- a/待归档/尽在掌握.md
+++ b/待归档/尽在掌握.md
@@ -1,7 +1,7 @@
 # 尽在掌握
 [尽在掌握](https://zhuanlan.zhihu.com/p/3366336231)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-28]
 > Link:
 > Category: #【答集】/04-社科答集 
