--- a/待归档/川普冻蒜.md
+++ b/待归档/川普冻蒜.md
@@ -1,7 +1,7 @@
 # 川普冻蒜
 [特斯拉推出无人驾驶出租车CyberCab ，无人驾驶货运车Robovan，有哪些亮点？其商业前景如何？](https://www.zhihu.com/question/814299278/answer/4829084980)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-12]
 > Link:
 > Category: #【答集】/13-百年未有之变局 
