--- a/待归档/左撇子.md
+++ b/待归档/左撇子.md
@@ -1,7 +1,7 @@
 # 左撇子
 [孩子有左撇子的迹象，要不要纠正他？](https://www.zhihu.com/question/439923460/answer/13048519066)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-23]
 > Link:
 > Category: #【答集】/01-家族答集 
