--- a/待归档/戴珍珠耳环的少女.md
+++ b/待归档/戴珍珠耳环的少女.md
@@ -1,7 +1,7 @@
 # 戴珍珠耳环的少女
 [男性审美和女性审美真的不一样吗？](https://www.zhihu.com/question/581692774/answer/9085271212)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-19]
 > Link:
 > Category: #【答集】/08-文艺答集 #【答集】/03-第一性 
