--- a/待归档/格洛克.md
+++ b/待归档/格洛克.md
@@ -1,7 +1,7 @@
 # 格洛克
 [国内警察已经小规模装备格洛克十七型手枪，难道我们就设计不出来比它还优秀的枪支吗？](https://www.zhihu.com/question/266952962/answer/8154356716)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-18]
 > Link:
 > Category: #【答集】/07-军事技术与艺术 
