--- a/待归档/正义交替.md
+++ b/待归档/正义交替.md
@@ -1,7 +1,7 @@
 # 正义交替
 [如何评价“如果知识产权开始作恶，那么盗版就开始具有天然的正义性”呢?](https://www.zhihu.com/question/894807364/answer/15268721577)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-26]
 > Link:
 > Category: #【答集】/04-社科答集 
