--- a/待归档/渗啥透.md
+++ b/待归档/渗啥透.md
@@ -1,7 +1,7 @@
 # 渗啥透
 [如何看待沈逸在视频中提到境外组织正在渗透包括京东在内的中企这一事实？](https://www.zhihu.com/question/1587440178/answer/12095040454)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-23]
 > Link:
 > Category: #【答集】/04-社科答集 
