--- a/待归档/漏了一个.md
+++ b/待归档/漏了一个.md
@@ -1,7 +1,7 @@
 # 漏了一个
 [太平天国最大的贡献是什么？](https://www.zhihu.com/question/579787333/answer/17087956017)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-29]
 > Link:
 > Category: #【答集】/04-社科答集 
