--- a/待归档/男王.md
+++ b/待归档/男王.md
@@ -1,7 +1,7 @@
 # 男王
 [为什么很多跟女性有关的领域都是男的干的比较优秀，比如很多衣服的设计师，化妆师，珠宝设计师，调香师等？](https://www.zhihu.com/question/35180052/answer/9318588948)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-19]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/03-第一性 
