--- a/待归档/神笔牛良.md
+++ b/待归档/神笔牛良.md
@@ -1,7 +1,7 @@
 # 神笔牛良
 [读完了大学依然是社会的底层，那读书的意义是什么呢？](https://www.zhihu.com/question/657847327/answer/5493772003)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-14]
 > Link:
 > Category: #【答集】/01-家族答集 
