--- a/待归档/维特观鲨.md
+++ b/待归档/维特观鲨.md
@@ -1,7 +1,7 @@
 # 维特观鲨
 [你们有没有发现国内男女对立的趋势越来越严重？](https://www.zhihu.com/question/665637933/answer/17978157893)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-30]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/01-家族答集 
