--- a/待归档/诤谏.md
+++ b/待归档/诤谏.md
@@ -1,7 +1,7 @@
 # 诤谏
 [什么样的朋友可以称为「诤友」？](https://www.zhihu.com/question/25811362/answer/5560868948)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-15]
 > Link:
 > Category: [处世]
