--- a/待归档/谢罪.md
+++ b/待归档/谢罪.md
@@ -1,7 +1,7 @@
 # 谢罪
 [逛街时遇到女友的前男友，他对我说：“我玩腻的垃圾，你却当成宝”，我要怎么回话，才能怼赢他？](https://www.zhihu.com/question/665887718/answer/6313481638)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-16]
 > Link:
 > Category: #【答集】/01-家族答集 
