--- a/待归档/贞子.md
+++ b/待归档/贞子.md
@@ -1,7 +1,7 @@
 # 贞子
 [如何对待那些在你人生低谷的时候冷嘲热讽甚至落井下石的人？](https://www.zhihu.com/question/779258584/answer/5259171450)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-15]
 > Link:
 > Category: #【答集】/01-家族答集 
