--- a/待归档/走出帐篷.md
+++ b/待归档/走出帐篷.md
@@ -1,7 +1,7 @@
 # 走出帐篷
 [男朋友说话很伤人，攻击外貌，我感觉已经没有和好的必要了，我应该怎么能尽快走出来？](https://www.zhihu.com/question/1101086810/answer/13027728863)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-23]
 > Link:
 > Category: #【答集】/01-家族答集 #【答集】/03-第一性 
