--- a/待归档/预期不良.md
+++ b/待归档/预期不良.md
@@ -1,7 +1,7 @@
 # 预期不良
 [上海女生患红斑狼疮赴瑞士安乐死，如何看待她面对死亡的态度？如何看待她自主选择结束生命？](https://www.zhihu.com/question/2001437757/answer/14710245944)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-25]
 > Link:
 > Category: #【答集】/01-家族答集 
