--- a/待归档/鼠标垫.md
+++ b/待归档/鼠标垫.md
@@ -1,7 +1,7 @@
 # 鼠标垫
 [鼠标垫能被其他什么东西完美平替吗？](https://www.zhihu.com/question/850271740/answer/11317454641)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-22]
 > Link:
 > Category: #【答集】/05-科学答集 
