--- a/【本周更新】/什么自信.md
+++ b/【本周更新】/什么自信.md
@@ -1,7 +1,7 @@
 # 什么自信
 [中国对核电安全自信来自哪？](https://www.zhihu.com/question/36213956/answer/20445724718)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-01]
 > Link:
 > Category: #【答集】/01-家族答集
