--- a/【本周更新】/几时崩溃.md
+++ b/【本周更新】/几时崩溃.md
@@ -1,7 +1,7 @@
 # 几时崩溃
 [乌克兰近期在乌东连失战略要地，是不是即将迎来总崩溃？](https://www.zhihu.com/question/2367708691/answer/21037796641)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-02]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/13-百年未有之变局
