--- a/【本周更新】/天堂有路.md
+++ b/【本周更新】/天堂有路.md
@@ -1,7 +1,7 @@
 # 天堂有路
 [我陷入了一个走不出的思想泥潭，有高人给我解答吗？](https://www.zhihu.com/question/872826687/answer/24898944526)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-07]
 > Link:
 > Category: #【答集】/02-企管答集 #【答集】/01-家族答集
