--- a/【本周更新】/布宜诺斯艾利斯.md
+++ b/【本周更新】/布宜诺斯艾利斯.md
@@ -1,7 +1,7 @@
 # 布宜诺斯艾利斯
 [王传君交罚款为女儿摘公园柿子，这样做对女儿有什么影响？父母如何平衡孩子愿望与社会规则之间的关系？](https://www.zhihu.com/question/3231883987/answer/24858246276)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-07]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/01-家族答集
