--- a/【本周更新】/强电近地.md
+++ b/【本周更新】/强电近地.md
@@ -1,7 +1,7 @@
 # 强电近地
 [为什么电脑厂商用了二十多年时间才发现电源应该放在机箱下部？电源下置这么显而易见的结构这么晚才出现？](https://www.zhihu.com/question/2920707420/answer/22441751203)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-04]
 > Link:
 > Category: #【答集】/05-科学答集
