--- a/【本周更新】/所罗门说.md
+++ b/【本周更新】/所罗门说.md
@@ -1,7 +1,7 @@
 # 所罗门说
 [中学生的休学自由要用一把安眠药才能换得，优绩主义下我们该如何拒绝「休学耻感」？](https://www.zhihu.com/question/1276540028/answer/23960678295)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-07]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/01-家族答集
