--- a/【本周更新】/没影响.md
+++ b/【本周更新】/没影响.md
@@ -1,7 +1,7 @@
 # 没影响
 [京东这个代言事件，如果京东选择硬抗到底，会对京东有什么影响？](https://www.zhihu.com/question/1566098757/answer/20759160870)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-02]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/03-第一性
