--- a/【本周更新】/漫堤之日.md
+++ b/【本周更新】/漫堤之日.md
@@ -1,7 +1,7 @@
 # 漫堤之日
 [论男性一句「我养你」对女性杀伤力有多大?](https://www.zhihu.com/question/615951596/answer/21493502406)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-03]
 > Link:
 > Category: #【答集】/01-家族答集 #【答集】/03-第一性
