--- a/【本周更新】/私有不公.md
+++ b/【本周更新】/私有不公.md
@@ -1,7 +1,7 @@
 # 私有不公
 [为什么别人也犯错了就只批评我一个，这不公平。说出这样的话，是教育的哪一个环节出了问题？](https://www.zhihu.com/question/401780991/answer/22081433616)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-03]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/01-家族答集
