--- a/待归档/加衣服了.md
+++ b/待归档/加衣服了.md
@@ -1,7 +1,7 @@
 # 加衣服了
 [京东的公关怎么连撤稿函都做的不用心了？](https://www.zhihu.com/question/2078394426/answer/17333037634)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-29]
 > Link:
 > Category: #【答集】/13-百年未有之变局 
