--- a/待归档/百锁归一.md
+++ b/待归档/百锁归一.md
@@ -1,7 +1,7 @@
 # 百锁归一
 [特朗普重申若再次当选，他将大幅下调利率，释放了什么信号？](https://www.zhihu.com/question/1553416540/answer/12184624375)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-10-22]
 > Link:
 > Category: #【答集】/13-百年未有之变局 
