--- a/【文章目录】/【10 - 专题类】/俄乌战争/东食西宿.md
+++ b/【文章目录】/【10 - 专题类】/俄乌战争/东食西宿.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: [编辑于 2024-03-25]
 > Link:
-> Category: #_专题合集/合集4-俄乌战争
+> Category: #【答集】/13-百年未有之变局
 > Tag: #_专题合集/合集4-俄乌战争
 > 评论区:
 > 泛讨论:
