--- a/【本周更新】/纯粹感性批判.md
+++ b/【本周更新】/纯粹感性批判.md
@@ -4,8 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2024-11-15]
 > Link:
-> Category: #【答集】/04-社科答集 #【答集】/13-百年未有之变局 
-> Tag: 
+> Category: #【答集】/04-社科答集 #【答集】/13-百年未有之变局
+> Tag:
 > 评论区:
 > 泛讨论:
 
@@ -15,7 +15,7 @@
 
 这些预算在本质上是层层选拔的民选代表们在批准，现在改成网上公开、由全民直接评议，在本质上就是取消了这些民意代表的有效性。
 
-**如果这可行，那么美国的参议院、众议院存在的价值就要受到根本的质疑。**甚至在最终意义上讲，总统职位、选举人制度的存在的价值都要动摇。
+**如果这可行，那么美国的参议院、众议院存在的价值就要受到根本的质疑**。甚至在最终意义上讲，总统职位、选举人制度的存在的价值都要动摇。
 
 整个国家——乃至整个所谓西方文明——都要进入“纯粹感性批判”的全新时代。
 
