--- a/【文章目录】/【1 - 哲学类】/100 - 哲学总论/论开悟/修行成就者.md
+++ b/【文章目录】/【1 - 哲学类】/100 - 哲学总论/论开悟/修行成就者.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
-> Link: [[死亡]] [[宁不畏死]] [[开悟]] [[至勇]] [[悲观与乐观]]
+> Link: [[死亡]] [[【文章目录】/【1 - 哲学类】/190 - 伦理学/197 - 生命伦理学/关于死亡/宁不畏死]] [[开悟]] [[至勇]] [[悲观与乐观]]
 > Category: #【答集】/01-家族答集
 > Tag: #3-家庭伦理/3-家族传承/论死亡 
 > 评论区:
