--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/197 - 生命伦理学/关于死亡/星星.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/197 - 生命伦理学/关于死亡/星星.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [发布于 2021-08-11]
-> Link: [[生离死别]] [[死亡]] [[人吃人]] [[宁不畏死]] [[永生酷刑]] [[永生如何]] [[意识上传]] [[长生不老]] [[过渡性价值观]]
+> Link: [[生离死别]] [[死亡]] [[人吃人]] [[【文章目录】/【1 - 哲学类】/190 - 伦理学/197 - 生命伦理学/关于死亡/宁不畏死]] [[永生酷刑]] [[永生如何]] [[意识上传]] [[长生不老]] [[过渡性价值观]]
 > Category: #【答集】/01-家族答集 
 > Tag: #3-家庭伦理/3-家族传承/论死亡
 > 评论区:
