--- a/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/三面围堵.md
+++ b/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/三面围堵.md
@@ -13,6 +13,8 @@
 
 [为什么人们不喜欢被批评？](https://www.zhihu.com/question/22987136/answer/1434894604)
 
+也许她自己没有这样的明确的主观故意，但可惜**人发出的信号并不是完全由人的主观意愿决定的**。
+
 人最大的难题，就是说话、做事并不总是能匹配自己的意图。
 
 想给建议，却做成了批斗（judge）；想要和好，却做成了贿赂；想要鼓励，却做成了吹捧；想要分手，却做成了抛弃；想要说服，却成了胁迫；想要爱，却做成了罪。
