--- a/待归档/看不见的喷火龙.md
+++ b/待归档/看不见的喷火龙.md
@@ -2,7 +2,7 @@
 [女朋友是跳拉丁舞的，跳双人舞时会有身体接触，作为男友我感觉有点吃醋怎么办？](https://www.zhihu.com/question/594787988/answer/3424274481)
 
 > Author: #Anonymity
-> Last update: [编辑于 2024-03-09]
+> Last update: [编辑于 2024-11-18]
 > Link:
 > Category: #【答集】/01-家族答集 #【答集】/03-第一性 
 > Tag: 
@@ -15,13 +15,13 @@
 
 冬荫功汤，可以可以。:D\_\_ \_
 
-酸口的东西，主要你会弄，好吃的多了去了。
+酸口的东西，只要你会弄，好吃的多了去了。
 
 没听过“就这盘醋下了一锅饺子”吗？
 
-你学得会拿醋做菜，吃得起酸，你才能做坐下吃饭。
+你学得会拿醋做菜，吃得起酸，你才能坐下吃饭。
 
-因为这一席盛宴，醋是不会少的，而且越让人垂涎的，酸越多。
+因为这一席盛宴，醋是不会少的，而且越让人垂涎的，醋越多。
 
 你要确实吃不了，这不怪你，你没这个机缘罢了。
 
