--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/197 - 生命伦理学/关于死亡/唯此为大.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/197 - 生命伦理学/关于死亡/唯此为大.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-05-16]
-> Link: [[死亡]] [[宁不畏死]] [[修行成就者]] [[悲观与乐观]]
+> Link: [[死亡]] [[【文章目录】/【1 - 哲学类】/190 - 伦理学/197 - 生命伦理学/关于死亡/宁不畏死]] [[修行成就者]] [[悲观与乐观]]
 > Category: #【答集】/01-家族答集 
 > Tag: #3-家庭伦理/3-家族传承/论死亡
 > 评论区:
