--- a/【文章目录】/【4 - 应用科学】/490 - 商学/493 - 商业实践/企业幼稚病.md
+++ b/【文章目录】/【4 - 应用科学】/490 - 商学/493 - 商业实践/企业幼稚病.md
@@ -2,14 +2,14 @@
 [茶颜悦色疑薪资内乱，员工抱怨月薪 3000 元，高管在全员群内争论，200 多员工退群，真实情况如何？](https://www.zhihu.com/question/506658372/answer/2275824306)
 
 > Author: #Anonymity
-> Last update: [编辑于 2021-12-19]
+> Last update: [编辑于 2024-11-18]
 > Link: [[闲聊协议]] [[闲聊 2]] [[越界]] [[花名]] [[讨厌的梗]] [[崇拜与自恋]] [[傲慢]] [[批评]] [[复盘]] [[别想骗我]]
 > Category: #【答集】/02-企管答集
 > Tag: #4-职业发展/6-经营案例
 > 评论区:
 > 泛讨论:
 
-茶颜悦色这次犯了几大错误，各位企业管理者自己警醒。
+茶颜悦色这次犯了几大错误，企业管理者需要警醒。
 
 **1）在企业文化里营造“幼儿园风格”。**
 
