--- a/待归档/没家教和不礼貌.md
+++ b/待归档/没家教和不礼貌.md
@@ -2,14 +2,14 @@
 [如何对待缺乏家教而没有礼貌，但也不存在恶意的人?](https://www.zhihu.com/question/349351152/answer/27316601603)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2024-11-12]
+> Last update: [编辑于 2024-11-10]
 > Link:
 > Category: #【答集】/01-家族答集 
 > Tag: 
 > 评论区:
 > 泛讨论:
 
-**其实礼貌并不需要以有家教为前提。**
+一个误区是，**其实礼貌并不需要家教**。
 
 礼貌不是礼仪，依赖家教的那个是礼仪，不是礼貌。
 
