--- a/【文章目录】/【8 - 语言文学类】/810 - 文学总论/文字张力.md
+++ b/【文章目录】/【8 - 语言文学类】/810 - 文学总论/文字张力.md
@@ -2,7 +2,7 @@
 [什么是文字的张力？](https://www.zhihu.com/question/20815158/answer/1344519035)
 
 > Author: #Anonymity
-> Last update: [编辑于 2024-11-14]
+> Last update: [编辑于 2023-01-12]
 > Link: [[文笔]] [[三流作家]]
 > Category: #【答集】/08-文艺答集
 > Tag: #6-文化艺术/2-语言文学/2c-文学总论  
@@ -101,8 +101,6 @@
 
 --------------------
 
-………
-
 Fuuuuuuuuu……ck！！！！
 
 --------------------
@@ -111,7 +109,9 @@ Fuuuuuuuuu……ck！！！！
 
 --------------------
 
-扎一针，见点血，
+扎一针，
+
+见点血，
 
 不够吗？！
 
