--- a/待归档/宗族财团.md
+++ b/待归档/宗族财团.md
@@ -1,7 +1,7 @@
 # 宗族财团
 [宗族在封建社会是一股很强的力量，我认为社会会逐步回归宗族，你呢？](https://www.zhihu.com/question/577295064/answer/29894047800)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-13]
 > Link:
 > Category: #【答集】/01-家族答集
