--- a/待归档/所罗门说.md
+++ b/待归档/所罗门说.md
@@ -1,13 +1,23 @@
 # 所罗门说
 [中学生的休学自由要用一把安眠药才能换得，优绩主义下我们该如何拒绝「休学耻感」？](https://www.zhihu.com/question/1276540028/answer/23960678295)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-07]
 > Link:
-> Category: #【答集】/04-社科答集 #【答集】/01-家族答集 
-> Tag: 
+> Category: #【答集】/04-社科答集 #【答集】/01-家族答集
+> Tag:
 > 评论区:
 > 泛讨论:
+
+有些人越来越离谱了。
+
+先看完这个，再谈论你们有多少资格批评我不懂抑郁症。
+
+[善哉集](https://www.zhihu.com/collection/913519589)
+
+你们先拿到这个结果，再来跟我争论。
+
+--------------------
 
 现在的青少年面对着一个格外凶险的世界，比历史上的任何时候都更加凶险。
 
