--- a/待归档/拆弹有奖.md
+++ b/待归档/拆弹有奖.md
@@ -1,7 +1,7 @@
 # 拆弹有奖
 [万斯的“无孩爱猫女”言论很得罪人，为啥他们反而大比分赢了大选？](https://www.zhihu.com/question/3520419090/answer/28491197980)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-11]
 > Link:
 > Category: #【答集】/13-百年未有之变局
