--- a/待归档/搬运狗.md
+++ b/待归档/搬运狗.md
@@ -1,7 +1,7 @@
 # 搬运狗
 [刚看到珠海航展「机器狼」的新闻，这是一款怎样的武器？未来的无人作战会变成啥样？](https://www.zhihu.com/question/3830542886/answer/30343361818)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-13]
 > Link:
 > Category: #【答集】/07-军事技术与艺术
