--- a/待归档/无可妥协.md
+++ b/待归档/无可妥协.md
@@ -1,7 +1,7 @@
 # 无可妥协
 [如何评价11月11日珠海体育中心撞人事件？](https://www.zhihu.com/question/3887644490/answer/29097292771)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-12]
 > Link:
 > Category: #【答集】/04-社科答集
