--- a/待归档/纯粹感性批判.md
+++ b/待归档/纯粹感性批判.md
@@ -1,7 +1,7 @@
 # 纯粹感性批判
 [马斯克表示「政府效率部」将在网上公布所有行动，会设「最蠢支出」排行榜，如何看待此事？有何影响？](https://www.zhihu.com/question/4051465844/answer/31892094861)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-15]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/13-百年未有之变局
