--- a/待归档/经久不衰.md
+++ b/待归档/经久不衰.md
@@ -1,7 +1,7 @@
 # 经久不衰
 [李子柒 11 月 12 日恢复更新，如何评价新视频的质量？她的账号还能维持断更前的热度吗？](https://www.zhihu.com/question/3963003265/answer/31453399110)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-14]
 > Link:
 > Category: #【答集】/08-文艺答集 #【答集】/01-家族答集
