--- a/待归档/说说你错在哪.md
+++ b/待归档/说说你错在哪.md
@@ -1,7 +1,7 @@
 # 说说你错在哪
 [领导突然说对我很失望让我反省，但是沟通中一直不告诉我哪里做错了，该怎么办？](https://www.zhihu.com/question/665986806/answer/28889902220)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-12]
 > Link:
 > Category: #【答集】/02-企管答集
