--- a/待归档/轨道爬升.md
+++ b/待归档/轨道爬升.md
@@ -1,7 +1,7 @@
 # 轨道爬升
 [卫星从低轨道变到高轨道要加速，但是高轨道环绕速度小于低轨道，所以卫星加速后是否需要减速？](https://www.zhihu.com/question/307876379/answer/30813121085)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-14]
 > Link:
 > Category: #【答集】/05-科学答集
