--- a/待归档/问道于盲.md
+++ b/待归档/问道于盲.md
@@ -1,7 +1,7 @@
 # 问道于盲
 [上课喝水是不尊重老师的表现吗？](https://www.zhihu.com/question/638499316/answer/31655307393)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-14]
 > Link:
 > Category: #【答集】/01-家族答集
