--- a/待归档/白加黑.md
+++ b/待归档/白加黑.md
@@ -1,7 +1,7 @@
 # 白加黑
 [我如果发明出来某种吃下去“一劳永逸”彻底清除所有“毒瘾”的药，会不会第二天被CIA或者毒枭查水表？](https://www.zhihu.com/question/562369738/answer/31920628505)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-15]
 > Link:
 > Category: #【答集】/05-科学答集
