--- a/待归档/祝融游戏.md
+++ b/待归档/祝融游戏.md
@@ -1,7 +1,7 @@
 # 祝融游戏
 [京东无锡物流园起火被烧，可能损失十几亿货物，目前情况如何？](https://www.zhihu.com/question/4047539780/answer/32091333486)
 
-> Author: #0-Anonymity
+> Author: #Anonymity
 > Last update: [编辑于 2024-11-15]
 > Link:
 > Category: #【答集】/04-社科答集
