--- a/待归档/帅的优势.md
+++ b/待归档/帅的优势.md
@@ -1,11 +1,11 @@
-# 帅
+# 帅的优势
 [长得帅在生活中有多大优势？](https://www.zhihu.com/question/501124785/answer/4345281258)
 
 > Author: #Anonymity
-> Last update: [编辑于 2024-10-07]
+> Last update: [编辑于 2024-11-28]
 > Link:
 > Category: #【答集】/03-第一性 
-> Tag: #_其它/待命名 
+> Tag: 
 > 评论区:
 > 泛讨论:
 
