--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原理/别互补.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原理/别互补.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2021-05-25]
 > Link: [[无目的]] [[恋爱原理]] [[立场分歧]] [[心窄路不宽]] [[原谅]] [[宽恕秘诀]]
 > Category: #【答集】/03-第一性
-> Tag: #_专题合集/合集1-概念与定义 #1-个人成长/5-核心能力/5b-学逻辑 #2-亲密关系/2-交往案例/2a-论恋爱
+> Tag: #_专题合集/合集1-概念与定义 #1-个人成长/5-核心能力/5b-学逻辑/怀疑的艺术  #2-亲密关系/2-交往案例/2a-论恋爱
 > 评论区:
 > 泛讨论:
 
