--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/文责意识/使用说明.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/文责意识/使用说明.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2022-01-27]
 > Link: [[傲慢]] [[爱与自由]] [[不卑不亢 1]] [[不卑不亢 2]] [[公允评价]] [[评价人]] [[评头论足]] [[说服力的重量]] [[喋喋不休]] [[批评]]
 > Category: #【答集】/03-第一性
-> Tag: #1-个人成长/5-核心能力/5i-旷野生存 #_专题合集/合集1-概念与定义 #1-个人成长/3-处世之道/3c-文责意识
+> Tag:  #1-个人成长/3-处世之道/3c-文责意识 #2-亲密关系/2-交往案例/2a-论恋爱 
 > 评论区:
 > 泛讨论:
 
