--- a/【文章目录】/【1 - 哲学类】/170 - 心理学/173 - 一般心理/情绪/后悔的真相.md
+++ b/【文章目录】/【1 - 哲学类】/170 - 心理学/173 - 一般心理/情绪/后悔的真相.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2021-11-29]
 > Link: [[可信]] [[检验信仰的客观标准]] [[思而行]] [[劝退]] [[亦真亦幻]] [[真正想做的事]] [[反刍痛苦]] [[静气]] [[诚实]] [[虚伪]] [[保持快乐]] [[痛苦根源]]
 > Category: #【答集】/03-第一性
-> Tag: #_专题合集/合集1-概念与定义 #1-个人成长/4-心理与疗愈/4c-抑郁成因 #2-亲密关系/2-交往案例/2b-论婚姻
+> Tag: #_专题合集/合集1-概念与定义 #1-个人成长/4-心理与疗愈/4c-抑郁成因 #2-亲密关系/2-交往案例/2b-论婚姻 #1-个人成长/1-内在建设/1B-修养 
 > 评论区:
 > 泛讨论:
 
