--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原理/主动的被动.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原理/主动的被动.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-12-27]
 > Link: [[爱]] [[恩]] [[恋爱原理]] [[温柔]] [[但行好事]] [[可爱]] [[值得一嫁]] [[亲子冲突]] [[不抱怨]] [[运气]]
 > Category: #【答集】/01-家族答集
-> Tag: #2-亲密关系/1-交往准则/1a-爱的原理 #_专题合集/合集6-个人信仰/A-Caritas/1-爱 #2-亲密关系/1-交往准则/1b-爱的禁忌 #_专题合集/合集1-概念与定义
+> Tag: #2-亲密关系/1-交往准则/1a-爱的原理 #_专题合集/合集6-个人信仰/A-Caritas/1-爱 #2-亲密关系/1-交往准则/1b-爱的禁忌 
 > 评论区:
 > 泛讨论:
 
