--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/态度与伦理/内卷.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/态度与伦理/内卷.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-07-18]
 > Link: [[敌人]] [[爹味]] [[拼爹]] [[躺平]] [[气泡膜]]
 > Category: #【答集】/01-家族答集
-> Tag: #_专题合集/合集1-概念与定义 #1-个人成长/1-内在建设/1A-三观/1b-人生观  #1-个人成长/5-核心能力/5e-数学与会计 #4-职业发展/1-态度与伦理
+> Tag: #_专题合集/合集1-概念与定义 #1-个人成长/1-内在建设/1A-三观/1a-世界观  #1-个人成长/5-核心能力/5e-数学与会计 #5-社会科学/1-社会学/1a-社会学总论 
 > 评论区: [[评论区_内卷]]
 > 泛讨论:
 
