--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/态度与伦理/地气.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/态度与伦理/地气.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2022-06-21]
 > Link: [[不抱怨]] [[主动的被动]] [[膝盖的目的]] [[燎原幻觉]]
 > Category: #【答集】/04-社科答集
-> Tag: #_专题合集/合集1-概念与定义 #1-个人成长/1-内在建设/1C-自强 #4-职业发展/1-态度与伦理
+> Tag: #_专题合集/合集1-概念与定义 #1-个人成长/2-外在管理/2b-人设指南 #4-职业发展/1-态度与伦理
 > 评论区: [[评论区_地气]]
 > 泛讨论:
 
