--- a/【文章目录】/【4 - 应用科学】/490 - 商学/494 - 企业管理/复盘.md
+++ b/【文章目录】/【4 - 应用科学】/490 - 商学/494 - 企业管理/复盘.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-08-20]
-> Link: [[SOP]] [[做计划]] [[能力]] [[领导力特征]] [[领导]] [[团结]] [[稳重]] [[求同存异]] [[评论冰箱]] [[差不多得了]] [[我是对的]] [[不在乎]]
+> Link: [[SOP 1]] [[做计划]] [[能力]] [[领导力特征]] [[领导]] [[团结]] [[稳重]] [[求同存异]] [[评论冰箱]] [[差不多得了]] [[我是对的]] [[不在乎]]
 > Category: #【答集】/02-企管答集
 > Tag: #4-职业发展/4-管理者素质 #1-个人成长/5-核心能力/5f-做计划
 > 评论区:
