--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/修养/静气.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/修养/静气.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2023-08-04]
-> Link: [[不紧张]] [[踏实]] [[稳重]] [[傲慢]] [[亦真亦幻]] [[凶不起]] [[烦躁]] [[逃避伤害]] [[做计划]] [[SOP]] [[聪明人 1]] [[安全感]] [[真正想做的事]] [[浪费生命的事]] [[穿裙子的儿子]] [[理想的能力]]
+> Link: [[不紧张]] [[踏实]] [[稳重]] [[傲慢]] [[亦真亦幻]] [[凶不起]] [[烦躁]] [[逃避伤害]] [[做计划]] [[SOP 1]] [[聪明人 1]] [[安全感]] [[真正想做的事]] [[浪费生命的事]] [[穿裙子的儿子]] [[理想的能力]]
 > Category: #【答集】/01-家族答集
 > Tag: #1-个人成长/4-心理与疗愈/4b-安全感 #1-个人成长/5-核心能力/5f-做计划 #1-个人成长/1-内在建设/1C-自强
 > 评论区:
