--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/择偶/身价.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/择偶/身价.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2021-06-25]
 > Link: [[恋爱原理]] [[紧追不放]] [[爱]] [[无价之宝]] [[贞操无价]]
 > Category: #【答集】/03-第一性
-> Tag: #_专题合集/合集1-概念与定义 #2-亲密关系/1-交往准则/1e-优质选择
+> Tag: #_专题合集/合集1-概念与定义 #2-亲密关系/1-交往准则/1e-优质选择 #1-个人成长/5-核心能力/5c-学哲学/论平权 #1-个人成长/1-内在建设/1A-三观/1c-价值观 
 > 评论区:
 > 泛讨论:
 
