--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/195 - 社会伦理/敌人.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/195 - 社会伦理/敌人.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2021-05-16]
 > Link: [[高贵的敌人]] [[尊重你的敌人]] [[辩论]] [[爱你的仇敌]] [[我的自由与你的安全]]
 > Category: #【答集】/01-家族答集
-> Tag: #_专题合集/合集1-概念与定义
+> Tag: #_专题合集/合集1-概念与定义 #1-个人成长/3-处世之道/3g-冲突处理 #4-职业发展/1-态度与伦理 
 > 评论区:
 > 泛讨论:
 
