--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -4,6 +4,14 @@
 > Last update: [编辑于 2023-09-14]
 
 
+以人僭神，从无善果。
+
+凡遇到这类“选择都是错的，但不选一定比有选更错”的终极困难，就纯看权柄。有权柄的人做出的决定，就是命运的决定，正确的错误。无需纠结。
+
+——《[最好的陌生人](https://www.zhihu.com/question/481836166/answer/2155711537)》
+
+---
+
 对人的恐惧最好的教育，就是让人意识到恐惧本身是成本很高的。
 
 ——《[安全的诅咒](https://www.zhihu.com/question/591953257/answer/78354422852)》
