--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -3,6 +3,11 @@
 > Author: #Anonymity 
 > Last update: [编辑于 2023-09-14]
 
+是飞得最快的飞机呈现出的外形特征定义了美，而不是美定义了飞得最快的飞机的形状。
+
+——《[体罚权](https://www.zhihu.com/question/12301157431/answer/102003538179)》
+
+---
 
 以人僭神，从无善果。
 
