--- a/待归档/黑鹅说.md
+++ b/待归档/黑鹅说.md
@@ -1,4 +1,4 @@
-# 黑鹅说
+z# 黑鹅说
 [为什么越「擅长提供情绪价值」的人，反而越容易陷入低自尊？你认可吗？](https://www.zhihu.com/question/12736357438/answer/1889788282646295922)
 
 > Author: #Anonymity
