--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原理/乱撕便条.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原理/乱撕便条.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2022-10-20]
-> Link: [[彩礼]] [[直截了当]]
+> Link: [[彩礼 1]] [[直截了当]]
 > Category: #【答集】/03-第一性
 > Tag: #_专题合集/合集1-概念与定义 #2-亲密关系/1-交往准则/1e-优质选择
 > 评论区:
