--- a/待归档/铁棒有何用.md
+++ b/待归档/铁棒有何用.md
@@ -2,12 +2,13 @@
 [如何评价「前三十年的工业化是一堆破铜烂铁」这种说法？](https://www.zhihu.com/question/51700891/answer/1896959008058876723)
 
 > Author: #Anonymity
-> Last update: [发布于 2025-04-19]
+> Last update: [编辑于 2025-04-20]
 > Link:
 > Category: #【答集】/04-社科答集 
 > Tag: #5-社会科学/3-经济学/3b-产业与工业 
 > 评论区:
 > 泛讨论:
+
 
 前三十年工业化最大的成就是造就了**一整个受到了工业文化洗礼的工人阶级**。
 
@@ -27,15 +28,19 @@
 
 这才是工业化的本质。
 
-工业化的实质，不是生产资料的工业化，而是生产关系的工业化、人的工业化。
+工业化的实质，不是[生产资料](https://zhida.zhihu.com/search?content_id=723624978&content_type=Answer&match_order=1&q=%E7%94%9F%E4%BA%A7%E8%B5%84%E6%96%99&zhida_source=entity)的工业化，而是[生产关系](https://zhida.zhihu.com/search?content_id=723624978&content_type=Answer&match_order=1&q=%E7%94%9F%E4%BA%A7%E5%85%B3%E7%B3%BB&zhida_source=entity)的工业化、人的工业化。
 
 中国的工业化之路最独特的要害，就在于生产关系、人的工业化超前于生产资料的工业化。
 
 我们基本跳过了“一村子农民按照种粮食的逻辑造飞机，造着造着造成一座飞机厂，农民们变成了工人”这样一个生产力先于生产关系的历史阶段。
 
-你们有没有看过《红猪》，里面有一段意大利家族造飞机的描述，那才是西方国家工业化的正常路线。
+你们有没有看过[《红猪》](https://zhida.zhihu.com/search?content_id=723624978&content_type=Answer&match_order=1&q=%E3%80%8A%E7%BA%A2%E7%8C%AA%E3%80%8B&zhida_source=entity)，里面有一段意大利家族造飞机的描述，那才是西方国家工业化的传统路线。
 
-这也是为什么西方国家的头部企业往往用“联合利华”“亨氏”“休斯公司”“麦道航空”“罗尔斯罗伊斯”这样的名称的根源。
+![](https://picx.zhimg.com/50/v2-0af0c8dd378a8e71dbd23508366b37e2_720w.jpg?source=2c26e567)
+
+一屋子亲戚造飞机
+
+这也是为什么西方国家的头部企业往往用“[联合利华](https://zhida.zhihu.com/search?content_id=723624978&content_type=Answer&match_order=1&q=%E8%81%94%E5%90%88%E5%88%A9%E5%8D%8E&zhida_source=entity)”“[亨氏](https://zhida.zhihu.com/search?content_id=723624978&content_type=Answer&match_order=1&q=%E4%BA%A8%E6%B0%8F&zhida_source=entity)”“[休斯](https://zhida.zhihu.com/search?content_id=723624978&content_type=Answer&match_order=1&q=%E4%BC%91%E6%96%AF&zhida_source=entity)”“[麦道](https://zhida.zhihu.com/search?content_id=723624978&content_type=Answer&match_order=1&q=%E9%BA%A6%E9%81%93&zhida_source=entity)”“[罗尔斯罗伊斯](https://zhida.zhihu.com/search?content_id=723624978&content_type=Answer&match_order=1&q=%E7%BD%97%E5%B0%94%E6%96%AF%E7%BD%97%E4%BC%8A%E6%96%AF&zhida_source=entity)”这样的名称的根源。
 
 他们是老老实实生产力先于生产关系的经典模式发育起来的。
 
